// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title renders correctly 1`] = `
<Text
  size={32}
  style={
    Array [
      Object {
        "color": "black",
        "fontFamily": "Pompiere-Regular",
        "fontSize": 32,
        "textAlign": "center",
      },
    ]
  }
>
  test
</Text>
`;

exports[`Title renders with specified size 1`] = `
<Text
  size={34}
  style={
    Array [
      Object {
        "color": "black",
        "fontFamily": "Pompiere-Regular",
        "fontSize": 34,
        "textAlign": "center",
      },
    ]
  }
>
  test
</Text>
`;
